# ADAM

./: .gitignore  pyproject.toml  requirements.txt
blog/: admin.py  forms.py  models.py  public_urls.py  public_views.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article_confirm_delete.html  article_form.html  article_list.html  category_confirm_delete.html  category_list.html  tag_confirm_delete.html  tag_list.html
bookmarks/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
bookmarks/migrations/: 0001_initial.py
bookmarks/templates/bookmarks/: bookmark_confirm_delete.html  bookmark_detail.html  bookmark_form.html  bookmark_list.html  collection_confirm_delete.html  collection_detail.html  collection_list.html  collection_update.html  tag_confirm_delete.html  tag_list.html
config/: settings.py  urls.py
core/: urls.py
core/templates/core/: base.html  dashboard.html  home.html
static/css/: main.css  main_old.css
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_description.py
tasks/templates/tasks/: category_confirm_delete.html  (+10 more)
templates/registration/: login.html
workspace/: admin.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
workspace/migrations/: 0001_initial.py  0002_alter_note_options_note_content_json_and_more.py  0003_remove_note_content_json_note_content_rich.py  0004_remove_note_content.py  0005_log.py  0006_log_ip_adress.py  0007_alter_log_action.py  0008_alter_log_action.py  0009_alter_log_action.py
(+14 files in other folders)
