[project]
name = "adam"
version = "0.1.0"
description = "Assistant Digital pour Applications Multiples"
authors = [
    {name = "Brice Harper"}
]
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
